# companion-backend

./: .gitignore  ;  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  dump.rdb  fly.toml  pyproject.toml  requirements.txt  test.txt
.ebextensions/: 01_fastapi.config
alembic/versions/: 0171e23ce20c_initial.py  01d998c96ffc_add_is_generating_to_student_course.py  0488018406fa_lecture_models_change.py  159d5a0f4429_initial_commit.py  2db729031074_email_object_model.py  2f3d2be4c9fa_pg_question_new.py  313c38dbdf44_complete_object.py  3aab366d0549_new_model.py  3d3a65e701cb_initial.py  423800730f93_add_tmp_problem_set_question_model.py  4529fdc3674d_reset_initial.py  4bca7ad3cc32_submission_lecture_model.py  52f27357aac5_add_module_description.py  57ca338d892d_initial.py  5b442f2da6e4_pg_question_update.py  600340a44e94_upgrade.py  656bb69ac261_initial.py  66a8f7a0f948_lecture_models.py  676065d1da94_code_model_new.py  6cb48c3dd1b7_update.py  728d628a5b8a_update_new_course_models.py  735ab9869813_lecture_models_change.py  7bad20f1f0b9_update_name_schema_for_code.py  7ee77a4e1898_update_database.py  8913a271f429_complete_object.py  8a88ce9ac379_new_model.py  969869e6ecf5_test_cases.py  98b737a53222_new_model.py  9cfb87646144_add_programming_language.py  9f19d530d2a3_initial.py  a73e481faa60_upgrade_db.py  ab3c6d333fde_adding_new_conversation_model.py  (+15 more)
app/: code_execution_utils.py  config.py  database.py  index.py  models.py  pydantic_schemas.py  response_utils.py  t1.py  t2.py  test_celery_docker_code_execution.py  utils.py
old_app/: utils.py
(+33 files in other folders)
